Third/PL/TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Commands
Rule 2     Commands -> <empty>
Rule 3     Commands -> Command Commands
Rule 4     Command -> Declaration
Rule 5     Declaration -> INT NOME
Rule 6     Declaration -> ARRAY NOME PAA NUMBER PAF
Rule 7     Declaration -> MATRIZ NOME PAA NUMBER PAF PAA NUMBER PAF
Rule 8     Command -> Assign
Rule 9     Assign -> INT NOME EQUALS NUMBER
Rule 10    Assign -> NOME EQUALS Expression
Rule 11    Assign -> NOME PAA Expression PAF EQUALS Expression
Rule 12    Assign -> NOME PAA Expression PAF PAA Expression PAF EQUALS Expression
Rule 13    Assign -> NOME EQUALS LER
Rule 14    Assign -> NOME PAA Expression PAF EQUALS LER
Rule 15    Assign -> NOME PAA Expression PAF PAA Expression PAF EQUALS LER
Rule 16    Command -> Write
Rule 17    Write -> ESCREVER Expression
Rule 18    Command -> Enq
Rule 19    Enq -> ENQUANTO Condition FAZ Commands STOPCOM
Rule 20    Command -> Se
Rule 21    Se -> SE Condition FAZ Commands STOPCOM
Rule 22    Se -> SE Condition FAZ Commands SENAO FAZ Commands STOPCOM
Rule 23    Expression -> <empty>
Rule 24    Expression -> NUMBER
Rule 25    Expression -> PCA Expression PCF
Rule 26    Expression -> PLUS PCA Expression VIRG Expression PCF
Rule 27    Expression -> MINUS PCA Expression VIRG Expression PCF
Rule 28    Expression -> TIMES PCA Expression VIRG Expression PCF
Rule 29    Expression -> DIVIDE PCA Expression VIRG Expression PCF
Rule 30    Expression -> Condition
Rule 31    Condition -> PCA Condition PCF
Rule 32    Condition -> EQEQ PCA Expression VIRG Expression PCF
Rule 33    Condition -> NEQ PCA Expression VIRG Expression PCF
Rule 34    Condition -> GEQ PCA Expression VIRG Expression PCF
Rule 35    Condition -> LEQ PCA Expression VIRG Expression PCF
Rule 36    Condition -> BIGGER PCA Expression VIRG Expression PCF
Rule 37    Condition -> MINOR PCA Expression VIRG Expression PCF
Rule 38    Condition -> E PCA Expression VIRG Expression PCF
Rule 39    Condition -> OU PCA Expression VIRG Expression PCF
Rule 40    Expression -> Var
Rule 41    Var -> NOME
Rule 42    Var -> NOME PAA Expression PAF
Rule 43    Var -> NOME PAA Expression PAF PAA Expression PAF

Terminals, with rules where they appear

ARRAY                : 6
BIGGER               : 36
DIVIDE               : 29
E                    : 38
ENQUANTO             : 19
EQEQ                 : 32
EQUALS               : 9 10 11 12 13 14 15
ESCREVER             : 17
FAZ                  : 19 21 22 22
GEQ                  : 34
INT                  : 5 9
LEQ                  : 35
LER                  : 13 14 15
MATRIZ               : 7
MINOR                : 37
MINUS                : 27
NEQ                  : 33
NOME                 : 5 6 7 9 10 11 12 13 14 15 41 42 43
NUMBER               : 6 7 7 9 24
OU                   : 39
PAA                  : 6 7 7 11 12 12 14 15 15 42 43 43
PAF                  : 6 7 7 11 12 12 14 15 15 42 43 43
PCA                  : 25 26 27 28 29 31 32 33 34 35 36 37 38 39
PCF                  : 25 26 27 28 29 31 32 33 34 35 36 37 38 39
PLUS                 : 26
SE                   : 21 22
SENAO                : 22
STOPCOM              : 19 21 22
TIMES                : 28
VIRG                 : 26 27 28 29 32 33 34 35 36 37 38 39
error                : 

Nonterminals, with rules where they appear

Assign               : 8
Command              : 3
Commands             : 1 3 19 21 22 22
Condition            : 19 21 22 30 31
Declaration          : 4
Enq                  : 18
Expression           : 10 11 11 12 12 12 14 15 15 17 25 26 26 27 27 28 28 29 29 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 42 43 43
Program              : 0
Se                   : 20
Var                  : 40
Write                : 16

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Commands
    (2) Commands -> .
    (3) Commands -> . Command Commands
    (4) Command -> . Declaration
    (8) Command -> . Assign
    (16) Command -> . Write
    (18) Command -> . Enq
    (20) Command -> . Se
    (5) Declaration -> . INT NOME
    (6) Declaration -> . ARRAY NOME PAA NUMBER PAF
    (7) Declaration -> . MATRIZ NOME PAA NUMBER PAF PAA NUMBER PAF
    (9) Assign -> . INT NOME EQUALS NUMBER
    (10) Assign -> . NOME EQUALS Expression
    (11) Assign -> . NOME PAA Expression PAF EQUALS Expression
    (12) Assign -> . NOME PAA Expression PAF PAA Expression PAF EQUALS Expression
    (13) Assign -> . NOME EQUALS LER
    (14) Assign -> . NOME PAA Expression PAF EQUALS LER
    (15) Assign -> . NOME PAA Expression PAF PAA Expression PAF EQUALS LER
    (17) Write -> . ESCREVER Expression
    (19) Enq -> . ENQUANTO Condition FAZ Commands STOPCOM
    (21) Se -> . SE Condition FAZ Commands STOPCOM
    (22) Se -> . SE Condition FAZ Commands SENAO FAZ Commands STOPCOM

    $end            reduce using rule 2 (Commands -> .)
    INT             shift and go to state 9
    ARRAY           shift and go to state 11
    MATRIZ          shift and go to state 12
    NOME            shift and go to state 10
    ESCREVER        shift and go to state 13
    ENQUANTO        shift and go to state 14
    SE              shift and go to state 15

    Program                        shift and go to state 1
    Commands                       shift and go to state 2
    Command                        shift and go to state 3
    Declaration                    shift and go to state 4
    Assign                         shift and go to state 5
    Write                          shift and go to state 6
    Enq                            shift and go to state 7
    Se                             shift and go to state 8

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Commands .

    $end            reduce using rule 1 (Program -> Commands .)


state 3

    (3) Commands -> Command . Commands
    (2) Commands -> .
    (3) Commands -> . Command Commands
    (4) Command -> . Declaration
    (8) Command -> . Assign
    (16) Command -> . Write
    (18) Command -> . Enq
    (20) Command -> . Se
    (5) Declaration -> . INT NOME
    (6) Declaration -> . ARRAY NOME PAA NUMBER PAF
    (7) Declaration -> . MATRIZ NOME PAA NUMBER PAF PAA NUMBER PAF
    (9) Assign -> . INT NOME EQUALS NUMBER
    (10) Assign -> . NOME EQUALS Expression
    (11) Assign -> . NOME PAA Expression PAF EQUALS Expression
    (12) Assign -> . NOME PAA Expression PAF PAA Expression PAF EQUALS Expression
    (13) Assign -> . NOME EQUALS LER
    (14) Assign -> . NOME PAA Expression PAF EQUALS LER
    (15) Assign -> . NOME PAA Expression PAF PAA Expression PAF EQUALS LER
    (17) Write -> . ESCREVER Expression
    (19) Enq -> . ENQUANTO Condition FAZ Commands STOPCOM
    (21) Se -> . SE Condition FAZ Commands STOPCOM
    (22) Se -> . SE Condition FAZ Commands SENAO FAZ Commands STOPCOM

    $end            reduce using rule 2 (Commands -> .)
    STOPCOM         reduce using rule 2 (Commands -> .)
    SENAO           reduce using rule 2 (Commands -> .)
    INT             shift and go to state 9
    ARRAY           shift and go to state 11
    MATRIZ          shift and go to state 12
    NOME            shift and go to state 10
    ESCREVER        shift and go to state 13
    ENQUANTO        shift and go to state 14
    SE              shift and go to state 15

    Command                        shift and go to state 3
    Commands                       shift and go to state 16
    Declaration                    shift and go to state 4
    Assign                         shift and go to state 5
    Write                          shift and go to state 6
    Enq                            shift and go to state 7
    Se                             shift and go to state 8

state 4

    (4) Command -> Declaration .

    INT             reduce using rule 4 (Command -> Declaration .)
    ARRAY           reduce using rule 4 (Command -> Declaration .)
    MATRIZ          reduce using rule 4 (Command -> Declaration .)
    NOME            reduce using rule 4 (Command -> Declaration .)
    ESCREVER        reduce using rule 4 (Command -> Declaration .)
    ENQUANTO        reduce using rule 4 (Command -> Declaration .)
    SE              reduce using rule 4 (Command -> Declaration .)
    $end            reduce using rule 4 (Command -> Declaration .)
    STOPCOM         reduce using rule 4 (Command -> Declaration .)
    SENAO           reduce using rule 4 (Command -> Declaration .)


state 5

    (8) Command -> Assign .

    INT             reduce using rule 8 (Command -> Assign .)
    ARRAY           reduce using rule 8 (Command -> Assign .)
    MATRIZ          reduce using rule 8 (Command -> Assign .)
    NOME            reduce using rule 8 (Command -> Assign .)
    ESCREVER        reduce using rule 8 (Command -> Assign .)
    ENQUANTO        reduce using rule 8 (Command -> Assign .)
    SE              reduce using rule 8 (Command -> Assign .)
    $end            reduce using rule 8 (Command -> Assign .)
    STOPCOM         reduce using rule 8 (Command -> Assign .)
    SENAO           reduce using rule 8 (Command -> Assign .)


state 6

    (16) Command -> Write .

    INT             reduce using rule 16 (Command -> Write .)
    ARRAY           reduce using rule 16 (Command -> Write .)
    MATRIZ          reduce using rule 16 (Command -> Write .)
    NOME            reduce using rule 16 (Command -> Write .)
    ESCREVER        reduce using rule 16 (Command -> Write .)
    ENQUANTO        reduce using rule 16 (Command -> Write .)
    SE              reduce using rule 16 (Command -> Write .)
    $end            reduce using rule 16 (Command -> Write .)
    STOPCOM         reduce using rule 16 (Command -> Write .)
    SENAO           reduce using rule 16 (Command -> Write .)


state 7

    (18) Command -> Enq .

    INT             reduce using rule 18 (Command -> Enq .)
    ARRAY           reduce using rule 18 (Command -> Enq .)
    MATRIZ          reduce using rule 18 (Command -> Enq .)
    NOME            reduce using rule 18 (Command -> Enq .)
    ESCREVER        reduce using rule 18 (Command -> Enq .)
    ENQUANTO        reduce using rule 18 (Command -> Enq .)
    SE              reduce using rule 18 (Command -> Enq .)
    $end            reduce using rule 18 (Command -> Enq .)
    STOPCOM         reduce using rule 18 (Command -> Enq .)
    SENAO           reduce using rule 18 (Command -> Enq .)


state 8

    (20) Command -> Se .

    INT             reduce using rule 20 (Command -> Se .)
    ARRAY           reduce using rule 20 (Command -> Se .)
    MATRIZ          reduce using rule 20 (Command -> Se .)
    NOME            reduce using rule 20 (Command -> Se .)
    ESCREVER        reduce using rule 20 (Command -> Se .)
    ENQUANTO        reduce using rule 20 (Command -> Se .)
    SE              reduce using rule 20 (Command -> Se .)
    $end            reduce using rule 20 (Command -> Se .)
    STOPCOM         reduce using rule 20 (Command -> Se .)
    SENAO           reduce using rule 20 (Command -> Se .)


state 9

    (5) Declaration -> INT . NOME
    (9) Assign -> INT . NOME EQUALS NUMBER

    NOME            shift and go to state 17


state 10

    (10) Assign -> NOME . EQUALS Expression
    (11) Assign -> NOME . PAA Expression PAF EQUALS Expression
    (12) Assign -> NOME . PAA Expression PAF PAA Expression PAF EQUALS Expression
    (13) Assign -> NOME . EQUALS LER
    (14) Assign -> NOME . PAA Expression PAF EQUALS LER
    (15) Assign -> NOME . PAA Expression PAF PAA Expression PAF EQUALS LER

    EQUALS          shift and go to state 18
    PAA             shift and go to state 19


state 11

    (6) Declaration -> ARRAY . NOME PAA NUMBER PAF

    NOME            shift and go to state 20


state 12

    (7) Declaration -> MATRIZ . NOME PAA NUMBER PAF PAA NUMBER PAF

    NOME            shift and go to state 21


state 13

    (17) Write -> ESCREVER . Expression
    (23) Expression -> .
    (24) Expression -> . NUMBER
    (25) Expression -> . PCA Expression PCF
    (26) Expression -> . PLUS PCA Expression VIRG Expression PCF
    (27) Expression -> . MINUS PCA Expression VIRG Expression PCF
    (28) Expression -> . TIMES PCA Expression VIRG Expression PCF
    (29) Expression -> . DIVIDE PCA Expression VIRG Expression PCF
    (30) Expression -> . Condition
    (40) Expression -> . Var
    (31) Condition -> . PCA Condition PCF
    (32) Condition -> . EQEQ PCA Expression VIRG Expression PCF
    (33) Condition -> . NEQ PCA Expression VIRG Expression PCF
    (34) Condition -> . GEQ PCA Expression VIRG Expression PCF
    (35) Condition -> . LEQ PCA Expression VIRG Expression PCF
    (36) Condition -> . BIGGER PCA Expression VIRG Expression PCF
    (37) Condition -> . MINOR PCA Expression VIRG Expression PCF
    (38) Condition -> . E PCA Expression VIRG Expression PCF
    (39) Condition -> . OU PCA Expression VIRG Expression PCF
    (41) Var -> . NOME
    (42) Var -> . NOME PAA Expression PAF
    (43) Var -> . NOME PAA Expression PAF PAA Expression PAF

  ! shift/reduce conflict for NOME resolved as shift
    INT             reduce using rule 23 (Expression -> .)
    ARRAY           reduce using rule 23 (Expression -> .)
    MATRIZ          reduce using rule 23 (Expression -> .)
    ESCREVER        reduce using rule 23 (Expression -> .)
    ENQUANTO        reduce using rule 23 (Expression -> .)
    SE              reduce using rule 23 (Expression -> .)
    $end            reduce using rule 23 (Expression -> .)
    STOPCOM         reduce using rule 23 (Expression -> .)
    SENAO           reduce using rule 23 (Expression -> .)
    NUMBER          shift and go to state 23
    PCA             shift and go to state 24
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28
    EQEQ            shift and go to state 31
    NEQ             shift and go to state 32
    GEQ             shift and go to state 33
    LEQ             shift and go to state 34
    BIGGER          shift and go to state 35
    MINOR           shift and go to state 36
    E               shift and go to state 37
    OU              shift and go to state 38
    NOME            shift and go to state 39

  ! NOME            [ reduce using rule 23 (Expression -> .) ]

    Expression                     shift and go to state 22
    Condition                      shift and go to state 29
    Var                            shift and go to state 30

state 14

    (19) Enq -> ENQUANTO . Condition FAZ Commands STOPCOM
    (31) Condition -> . PCA Condition PCF
    (32) Condition -> . EQEQ PCA Expression VIRG Expression PCF
    (33) Condition -> . NEQ PCA Expression VIRG Expression PCF
    (34) Condition -> . GEQ PCA Expression VIRG Expression PCF
    (35) Condition -> . LEQ PCA Expression VIRG Expression PCF
    (36) Condition -> . BIGGER PCA Expression VIRG Expression PCF
    (37) Condition -> . MINOR PCA Expression VIRG Expression PCF
    (38) Condition -> . E PCA Expression VIRG Expression PCF
    (39) Condition -> . OU PCA Expression VIRG Expression PCF

    PCA             shift and go to state 41
    EQEQ            shift and go to state 31
    NEQ             shift and go to state 32
    GEQ             shift and go to state 33
    LEQ             shift and go to state 34
    BIGGER          shift and go to state 35
    MINOR           shift and go to state 36
    E               shift and go to state 37
    OU              shift and go to state 38

    Condition                      shift and go to state 40

state 15

    (21) Se -> SE . Condition FAZ Commands STOPCOM
    (22) Se -> SE . Condition FAZ Commands SENAO FAZ Commands STOPCOM
    (31) Condition -> . PCA Condition PCF
    (32) Condition -> . EQEQ PCA Expression VIRG Expression PCF
    (33) Condition -> . NEQ PCA Expression VIRG Expression PCF
    (34) Condition -> . GEQ PCA Expression VIRG Expression PCF
    (35) Condition -> . LEQ PCA Expression VIRG Expression PCF
    (36) Condition -> . BIGGER PCA Expression VIRG Expression PCF
    (37) Condition -> . MINOR PCA Expression VIRG Expression PCF
    (38) Condition -> . E PCA Expression VIRG Expression PCF
    (39) Condition -> . OU PCA Expression VIRG Expression PCF

    PCA             shift and go to state 41
    EQEQ            shift and go to state 31
    NEQ             shift and go to state 32
    GEQ             shift and go to state 33
    LEQ             shift and go to state 34
    BIGGER          shift and go to state 35
    MINOR           shift and go to state 36
    E               shift and go to state 37
    OU              shift and go to state 38

    Condition                      shift and go to state 42

state 16

    (3) Commands -> Command Commands .

    $end            reduce using rule 3 (Commands -> Command Commands .)
    STOPCOM         reduce using rule 3 (Commands -> Command Commands .)
    SENAO           reduce using rule 3 (Commands -> Command Commands .)


state 17

    (5) Declaration -> INT NOME .
    (9) Assign -> INT NOME . EQUALS NUMBER

    INT             reduce using rule 5 (Declaration -> INT NOME .)
    ARRAY           reduce using rule 5 (Declaration -> INT NOME .)
    MATRIZ          reduce using rule 5 (Declaration -> INT NOME .)
    NOME            reduce using rule 5 (Declaration -> INT NOME .)
    ESCREVER        reduce using rule 5 (Declaration -> INT NOME .)
    ENQUANTO        reduce using rule 5 (Declaration -> INT NOME .)
    SE              reduce using rule 5 (Declaration -> INT NOME .)
    $end            reduce using rule 5 (Declaration -> INT NOME .)
    STOPCOM         reduce using rule 5 (Declaration -> INT NOME .)
    SENAO           reduce using rule 5 (Declaration -> INT NOME .)
    EQUALS          shift and go to state 43


state 18

    (10) Assign -> NOME EQUALS . Expression
    (13) Assign -> NOME EQUALS . LER
    (23) Expression -> .
    (24) Expression -> . NUMBER
    (25) Expression -> . PCA Expression PCF
    (26) Expression -> . PLUS PCA Expression VIRG Expression PCF
    (27) Expression -> . MINUS PCA Expression VIRG Expression PCF
    (28) Expression -> . TIMES PCA Expression VIRG Expression PCF
    (29) Expression -> . DIVIDE PCA Expression VIRG Expression PCF
    (30) Expression -> . Condition
    (40) Expression -> . Var
    (31) Condition -> . PCA Condition PCF
    (32) Condition -> . EQEQ PCA Expression VIRG Expression PCF
    (33) Condition -> . NEQ PCA Expression VIRG Expression PCF
    (34) Condition -> . GEQ PCA Expression VIRG Expression PCF
    (35) Condition -> . LEQ PCA Expression VIRG Expression PCF
    (36) Condition -> . BIGGER PCA Expression VIRG Expression PCF
    (37) Condition -> . MINOR PCA Expression VIRG Expression PCF
    (38) Condition -> . E PCA Expression VIRG Expression PCF
    (39) Condition -> . OU PCA Expression VIRG Expression PCF
    (41) Var -> . NOME
    (42) Var -> . NOME PAA Expression PAF
    (43) Var -> . NOME PAA Expression PAF PAA Expression PAF

  ! shift/reduce conflict for NOME resolved as shift
    LER             shift and go to state 45
    INT             reduce using rule 23 (Expression -> .)
    ARRAY           reduce using rule 23 (Expression -> .)
    MATRIZ          reduce using rule 23 (Expression -> .)
    ESCREVER        reduce using rule 23 (Expression -> .)
    ENQUANTO        reduce using rule 23 (Expression -> .)
    SE              reduce using rule 23 (Expression -> .)
    $end            reduce using rule 23 (Expression -> .)
    STOPCOM         reduce using rule 23 (Expression -> .)
    SENAO           reduce using rule 23 (Expression -> .)
    NUMBER          shift and go to state 23
    PCA             shift and go to state 24
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28
    EQEQ            shift and go to state 31
    NEQ             shift and go to state 32
    GEQ             shift and go to state 33
    LEQ             shift and go to state 34
    BIGGER          shift and go to state 35
    MINOR           shift and go to state 36
    E               shift and go to state 37
    OU              shift and go to state 38
    NOME            shift and go to state 39

  ! NOME            [ reduce using rule 23 (Expression -> .) ]

    Expression                     shift and go to state 44
    Condition                      shift and go to state 29
    Var                            shift and go to state 30

state 19

    (11) Assign -> NOME PAA . Expression PAF EQUALS Expression
    (12) Assign -> NOME PAA . Expression PAF PAA Expression PAF EQUALS Expression
    (14) Assign -> NOME PAA . Expression PAF EQUALS LER
    (15) Assign -> NOME PAA . Expression PAF PAA Expression PAF EQUALS LER
    (23) Expression -> .
    (24) Expression -> . NUMBER
    (25) Expression -> . PCA Expression PCF
    (26) Expression -> . PLUS PCA Expression VIRG Expression PCF
    (27) Expression -> . MINUS PCA Expression VIRG Expression PCF
    (28) Expression -> . TIMES PCA Expression VIRG Expression PCF
    (29) Expression -> . DIVIDE PCA Expression VIRG Expression PCF
    (30) Expression -> . Condition
    (40) Expression -> . Var
    (31) Condition -> . PCA Condition PCF
    (32) Condition -> . EQEQ PCA Expression VIRG Expression PCF
    (33) Condition -> . NEQ PCA Expression VIRG Expression PCF
    (34) Condition -> . GEQ PCA Expression VIRG Expression PCF
    (35) Condition -> . LEQ PCA Expression VIRG Expression PCF
    (36) Condition -> . BIGGER PCA Expression VIRG Expression PCF
    (37) Condition -> . MINOR PCA Expression VIRG Expression PCF
    (38) Condition -> . E PCA Expression VIRG Expression PCF
    (39) Condition -> . OU PCA Expression VIRG Expression PCF
    (41) Var -> . NOME
    (42) Var -> . NOME PAA Expression PAF
    (43) Var -> . NOME PAA Expression PAF PAA Expression PAF

    PAF             reduce using rule 23 (Expression -> .)
    NUMBER          shift and go to state 23
    PCA             shift and go to state 24
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28
    EQEQ            shift and go to state 31
    NEQ             shift and go to state 32
    GEQ             shift and go to state 33
    LEQ             shift and go to state 34
    BIGGER          shift and go to state 35
    MINOR           shift and go to state 36
    E               shift and go to state 37
    OU              shift and go to state 38
    NOME            shift and go to state 39

    Expression                     shift and go to state 46
    Condition                      shift and go to state 29
    Var                            shift and go to state 30

state 20

    (6) Declaration -> ARRAY NOME . PAA NUMBER PAF

    PAA             shift and go to state 47


state 21

    (7) Declaration -> MATRIZ NOME . PAA NUMBER PAF PAA NUMBER PAF
